--- a/index.html
+++ b/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Symbiotic Pursuits</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
+    <title>Fruit Armada</title>
+</head>
+<body>
+
+    <!--Navbar-->
+    <section> 
+        <nav class="navbar-element"></nav>
+            <a href=""> Home </a>
+            <a href=""> About </a>
+            <a href=""> Blog </a>
+            <a href=""> Contact Me </a>
+
+    </section>
+    <!--Intro-->
+    <!--Posts-->
+    <!--Youtube Carousel-->
+    <!--Newest Tweet / Grabber-->
+    <!--Sponsors-->
+    <!--Footer-->
+
+</body> 
 </html>
