feat: prototype initial layout

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./src/css/style.css" />
     <!-- Title + Description -->
     <title>Fruit Armada</title>
     <meta name="description" content="I currently work as a Systems Administrator. I am looking to further my knowledge in technology so that I can build my skills.">
@@ -23,22 +24,17 @@
     <meta name="twitter:image" content="./src/images/avatar.jpg">
 </head>
 <body>
-
-    <!--Navbar-->
-    <section> 
-        <nav class="navbar-element"></nav>
-            <a href=""> Home </a>
-            <a href=""> About </a>
-            <a href=""> Blog </a>
-            <a href=""> Contact Me </a>
-
-    </section>
-    <!--Intro-->
-    <!--Posts-->
-    <!--Youtube Carousel-->
-    <!--Newest Tweet / Grabber-->
-    <!--Sponsors-->
-    <!--Footer-->
-
+  <nav>
+    <img class="avatar" src="./src/images/avatar.jpg" alt="" />
+    <div class="flex-column">
+    <a href="./index.html">Home</a>
+    <a href="./src/pages/about.html">About</a>
+    <a href="./src/pages/contact.html">Contact</a>
+    </div>
+  </nav>
+  <main>
+    <h1>Hi, I'm Fruit Pursuits</h1>
+    <p>This is my awesome adorable website.</p>
+  </main>
 </body> 
 </html>
