feat: finish scaffolding out pages

--- a/index.html
+++ b/index.html
@@ -29,12 +29,14 @@
     <div class="flex-column">
     <a href="./index.html">Home</a>
     <a href="./src/pages/about.html">About</a>
+    <a href="./src/pages/blog.html">Blog</a>
     <a href="./src/pages/contact.html">Contact</a>
     </div>
   </nav>
   <main>
     <h1>Hi, I'm Fruit Pursuits</h1>
     <p>This is my awesome adorable website.</p>
+    <p>Use the links to do the stuff.</p>
   </main>
 </body> 
 </html>
