--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>FruitPursuits</title>
+    <title>Fruit Armada</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Title + Description -->
@@ -13,20 +13,17 @@
     />
 
     <!-- OG Tags -->
-    <meta
-      property="og:url"
-      content="https://fruit.naomi.lgbt"
-    />
+    <meta property="og:url" content="https://fruit.naomi.lgbt" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Fruit Armada" />
     <meta
       property="og:description"
       content="I currently work as a Systems Administrator. I am looking to further my knowledge in technology so that I can build my skills."
     />
-    <meta property="og:image" content="./assets/img/avatar.jpg" />
+    <meta property="og:image" content="/assets/img/avatar.jpg" />
 
     <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="summary_image" />
     <meta property="twitter:domain" content="fruit.naomi.lgbt" />
     <meta
       property="twitter:url"
@@ -37,7 +34,7 @@
       name="twitter:description"
       content="I currently work as a Systems Administrator. I am looking to further my knowledge in technology so that I can build my skills."
     />
-    <meta name="twitter:image" content="./src/images/avatar.jpg" />
+    <meta name="twitter:image" content="/assets/img/avatar.jpg" />
   </head>
   <body>
     <app-root></app-root>
