--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     <meta property="og:image" content="/assets/img/avatar.jpg" />
 
     <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_image" />
+    <meta name="twitter:card" content="summary" />
     <meta property="twitter:domain" content="fruit.naomi.lgbt" />
     <meta
       property="twitter:url"
